node-service.yml
apiVersion: v1
kind: Service
metadata:
 name: node-service
 labels:
  name: node
spec:
 type: NodePort
 ports:
  - port: 35000
    targetPort: 3000
 selector:
   app: node
---
