service.yml
apiVersion: v1
kind: Service
metadata:
 name: mongo-service
 labels:
  name: mongo
spec:
 type: ClusterIP
 ports:
  - port: 27017
    targetPort: 27017
 selector:
   app: database
---
